# uavs4smart-farming

./: README.md
MotionPlanner/coppeliaSim/: gui.ttt  main.py  motion.ttt  test.ttt  vrep.py
MotionPlanner/coppeliaSim/QuadMILP/: PathReader.py  RobotModel.py  TrajManager.py  __init__.py  model.py
MotionPlanner/coppeliaSim/test/: area_decomposition.json  area_decomposition_02 (copy).json  area_decomposition_02.json
MotionPlanner/ros/area_coverage/: CMakeLists.txt  package.xml
MotionPlanner/ros/area_coverage/config/: area_decomposition_01.json  mymap.yaml
MotionPlanner/ros/area_coverage/include/area_coverage/: quad_body_motion.h  receeding_horizon.h
MotionPlanner/ros/area_coverage/launch/: coverage_reader.launch  coverage_view.launch
MotionPlanner/ros/area_coverage/scripts/: RobotModel.py  SimView.py  SweepPath.py  TaskAllocator.py  TrajPlanner.py  area_coverage.py  path_reader.py  pose_controller.py
MotionPlanner/ros/area_coverage/src/: controller.cpp  coverage_view.cpp
MotionPlanner/ros/area_coverage/tasking/: CMakeLists.txt  main.cpp
MotionPlanner/ros/area_coverage/tasking/gui/: CMakeLists.txt  mainwindow (another copy).ui  mainwindow.cpp  mainwindow.ui
MotionPlanner/ros/area_coverage/tasking/gui/include/: mainwindow.h
MotionPlanner/ros/area_coverage/tasking/include/: logger.h  problem.h
MotionPlanner/ros/area_coverage/tasking/include/Algorithm/: SeqAreaDecompose.h  TriangleDecomposition.h
MotionPlanner/ros/area_coverage/tasking/src/: solver.cpp
MotionPlanner/ros/area_coverage/tasking/src/Alorithm/: SeqAreaDecompose.cpp
TaskPlanner/CLI/: CMakeLists.txt  main.cpp
TaskPlanner/CLI/include/: pch.h
TaskPlanner/CLI/include/algo/: TriangularDecomposition.h
TaskPlanner/CLI/src/: HorizontalAreaDecomposition.cpp  MinTurnDecomposition.cpp  TriangularDecomposition.cpp
TaskPlanner/CLI/test/: run.sh
TaskPlanner/Qt-GUI/: CMakeLists.txt  background.cpp  background.h  main.cpp  main.qml
TaskPlanner/Qt-GUI/include/: problem_definition.h  solver_interface.h
TaskPlanner/Qt-GUI/include/algo/: MinTurnDecomposition.h  SweepPathCalipers.h  taskallocation.h
TaskPlanner/Qt-GUI/src/: RotatingCalipers.cpp  SweepPathCalipers.cpp  option_parser.cpp  solver_interface.cpp  taskallocation.cpp
